--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
-streamlit
-pandas
-numpy
-scikit-learn
-joblib
+# Bank Marketing Term Deposit Prediction
+# Requirements for Notebook and Streamlit App
+
+# Core Data Science
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Machine Learning
+scikit-learn>=1.3.0
+imbalanced-learn>=0.11.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Model Serialization
+joblib>=1.3.0
+
+# Web App
+streamlit>=1.28.0
