--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,7 @@
-
+[theme]
+base = "light"
+primaryColor = "#2b6cb0"
+backgroundColor = "#f0f4f8"
+secondaryBackgroundColor = "#ffffff"
+textColor = "#1a365d"
+font = "sans serif"
