--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Bank Marketing Term Deposit Prediction
-# Requirements for Notebook and Streamlit App
+# Requirements for Streamlit App
 
 # Core Data Science
 pandas>=2.0.0
@@ -12,6 +12,7 @@ imbalanced-learn>=0.11.0
 # Visualization
 matplotlib>=3.7.0
 seaborn>=0.12.0
+plotly>=5.18.0
 
 # Model Serialization
 joblib>=1.3.0
